--- a/w_common/pubspec.yaml
+++ b/w_common/pubspec.yaml
@@ -4,18 +4,18 @@ description: General utilities for Dart projects.
 homepage: https://www.github.com/Workiva/w_common
 
 environment:
-  sdk: ">=2.11.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  intl: '>=0.15.8 <0.18.0'
-  js: ^0.6.3
-  logging: '>=0.11.3+2 <2.0.0'
-  meta: ^1.3.0
+  intl: ^0.18.0
+  js: ^0.6.7
+  logging: ^1.1.1
+  meta: ^1.9.0
 
 dev_dependencies:
-  build_runner: '>=1.12.0 <3.0.0'
-  build_test: ^2.0.0
-  build_web_compilers: '>=2.16.5 <4.0.0'
-  dependency_validator: ^3.0.0
-  mockito: ^5.0.0
-  test: ^1.16.2
+  build_runner: ^2.3.3
+  build_test: ^2.1.6
+  build_web_compilers: ^3.2.7
+  dependency_validator: ^3.2.2
+  mockito: ^5.3.2
+  test: ^1.23.1
