--- a/w_common_tools/pubspec.yaml
+++ b/w_common_tools/pubspec.yaml
@@ -4,25 +4,25 @@ description: General dev utilities for Dart projects.
 homepage: https://www.github.com/Workiva/w_common
 
 environment:
-  sdk: ">=2.11.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  args: ^2.0.0
-  async: ^2.4.0
+  args: ^2.4.0
+  async: ^2.10.0
   colorize: ^3.0.0
-  file: ^6.0.0
-  glob: ^2.0.0
-  meta: ^1.3.0
-  package_config: ^2.0.0
-  path: ^1.8.0
-  sass: ^1.58.1
-  source_maps: ^0.10.10
-  watcher: ^1.0.0
+  file: ^6.1.4
+  glob: ^2.1.1
+  meta: ^1.9.0
+  package_config: ^2.1.0
+  path: ^1.8.3
+  sass: ^1.58.3
+  source_maps: ^0.10.12
+  watcher: ^1.0.2
 
 dev_dependencies:
-  build_runner: '>=1.12.0 <3.0.0'
-  build_test: ^2.0.0
-  build_web_compilers: '>=2.16.5 <4.0.0'
-  dependency_validator: ^3.0.0
-  mockito: ^5.0.0
-  test: ^1.16.2
+  build_runner: ^2.3.3
+  build_test: ^2.1.6
+  build_web_compilers: ^3.2.7
+  dependency_validator: ^3.2.2
+  mockito: ^5.3.2
+  test: ^1.23.1
